5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4176/executions/1582_1560.log
== TEST (2019-03-14 17:08:21) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(.lower(string))
-- ERROR:
File "XXXX", line 2
    print(.lower(string))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:08:49) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"))
-- ERROR:
File "XXXX", line 2
    print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:09:24) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra".lower)
-- ERROR:
File "XXXX", line 2
    print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:09:28) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra".lower)
-- EXECUTION TIME:
0.147328
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:09:58) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
-- ERROR:
File "XXXX", line 2
    print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 17:10:02) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print = ("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
-- EXECUTION TIME:
0.123498
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:10:27) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print =.lower(("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 2
    print =.lower(("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 17:15:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print = .lower(("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 2
    print = .lower(("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:07:59) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra"
print(frase.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.lower())
NameError: name 'frase' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:08:16) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(frase.lower())
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(frase.lower())
NameError: name 'frase' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:09:29) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.".lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:09:33) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("AUGUSTA ADA BYRON, A CONDESSA DE LOVELACE, NASCEU EM 1815, NA INGLATERRA.".lower())
-- EXECUTION TIME:
0.125172
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
